--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "scripts": {
     "icons-cleanup": "bun run ./utils/icons-cleanup.ts",
+    "gen-all": "bun run ./utils/generator/all.ts",
     "gen-info": "bun run ./utils/generators/info.ts",
     "gen-headers": "bun run ./utils/generators/headers.ts",
     "gen-font-config": "bun run ./utils/generators/font-config.ts"
