--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "type": "module",
   "scripts": {
     "icons-cleanup": "bun run ./utils/icons-cleanup.ts",
-    "gen-all": "bun run ./utils/generator/all.ts",
-    "gen-info": "bun run ./utils/generators/info.ts",
-    "gen-headers": "bun run ./utils/generators/headers.ts",
-    "gen-font-config": "bun run ./utils/generators/font-config.ts"
+    "build": "bun run ./utils/builders/all.ts",
+    "build-info": "bun run ./utils/builders/info.ts",
+    "build-headers": "bun run ./utils/builders/headers.ts",
+    "build-font-config": "bun run ./utils/builders/font-config.ts",
+    "build-unicode-map": "bun run ./utils/builders/unicode-map.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
