--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "scripts": {
     "icons-cleanup": "bun run ./utils/icons-cleanup.ts",
     "build": "bun run ./utils/builders/all.ts",
-    "build-dirs-order": "bun run ./utils/builders/categories-order.ts",
-    "build-items-order": "bun run ./utils/builders/icons-order.ts",
-    "build-info": "bun run ./utils/builders/info.ts",
-    "build-headers": "bun run ./utils/builders/headers.ts",
+    "build-categories-order": "bun run ./utils/builders/categories-order.ts",
+    "build-icons-order": "bun run ./utils/builders/icons-order.ts",
+    "build-icons-rules": "bun run ./utils/builders/icons-rules.ts",
+    "build-icons-headers": "bun run ./utils/builders/icons-headers.ts",
     "build-font-config": "bun run ./utils/builders/font-config.ts",
     "build-unicode-map": "bun run ./utils/builders/unicode-map.ts"
   },
