refactored building script: now rules are separate by category; attributes in rules are sorted; rules supply multiple usage of same icons;

--- a/package.json
+++ b/package.json
@@ -3,13 +3,7 @@
   "type": "module",
   "scripts": {
     "icons-cleanup": "bun run ./utils/icons-cleanup.ts",
-    "build-all": "bun run ./utils/builders/all.ts",
-    "build-categories-order": "bun run ./utils/builders/categories-order.ts",
-    "build-icons-order": "bun run ./utils/builders/icons-order.ts",
-    "build-icons-rules": "bun run ./utils/builders/icons-rules.ts",
-    "build-icons-headers": "bun run ./utils/builders/icons-headers.ts",
-    "build-font-config": "bun run ./utils/builders/font-config.ts",
-    "build-unicode-map": "bun run ./utils/builders/unicode-map.ts"
+    "build-all": "bun run ./utils/builders/all.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
