--- a/rules/apparel.json
+++ b/rules/apparel.json
@@ -8,7 +8,7 @@
 		"isAnyKeyword": false,
 		"isInclusiveOr": false,
 		"isFullReplaced": false,
-		"header": "0x229a",
+		"header": "0x229b",
 		"include": [
 			"ekwd|ArmorBodyPartEyes"
 		],
@@ -23,7 +23,7 @@
 		"isAnyKeyword": false,
 		"isInclusiveOr": true,
 		"isFullReplaced": false,
-		"header": "0x229b",
+		"header": "0x229c",
 		"include": [
 			"ekwd|ClothingTypeMask"
 		],
@@ -38,7 +38,7 @@
 		"isAnyKeyword": false,
 		"isInclusiveOr": false,
 		"isFullReplaced": false,
-		"header": "0x229c",
+		"header": "0x229d",
 		"include": [
 			"ekwd|ObjectTypeClothing"
 		],
