--- a/rules/apparel.json
+++ b/rules/apparel.json
@@ -8,7 +8,7 @@
 		"isAnyKeyword": false,
 		"isInclusiveOr": true,
 		"isFullReplaced": false,
-		"header": "0x22eb",
+		"header": "0x22f3",
 		"include": [
 			"ekwd|ClothingTypeHat",
 			"ekwd|ArmorBodyPartHead"
@@ -29,7 +29,7 @@
 		"isAnyKeyword": false,
 		"isInclusiveOr": false,
 		"isFullReplaced": false,
-		"header": "0x22ec",
+		"header": "0x22f4",
 		"include": [
 			"ekwd|ClothingTypeHat",
 			"ekwd|ClothingTypeFedora"
@@ -45,7 +45,7 @@
 		"isAnyKeyword": false,
 		"isInclusiveOr": false,
 		"isFullReplaced": false,
-		"header": "0x22ed",
+		"header": "0x22f5",
 		"include": [
 			"ekwd|ClothingTypeHat",
 			"ekwd|HatTypeFasnachtMask"
@@ -61,7 +61,7 @@
 		"isAnyKeyword": false,
 		"isInclusiveOr": false,
 		"isFullReplaced": false,
-		"header": "0x22ee",
+		"header": "0x22f6",
 		"include": [
 			"edid|beret"
 		],
@@ -76,7 +76,7 @@
 		"isAnyKeyword": false,
 		"isInclusiveOr": false,
 		"isFullReplaced": false,
-		"header": "0x22ef",
+		"header": "0x22f7",
 		"include": [
 			"ekwd|ClothingTypeMask",
 			"ekwd|ClothingTypeGasMask"
@@ -92,7 +92,7 @@
 		"isAnyKeyword": false,
 		"isInclusiveOr": false,
 		"isFullReplaced": false,
-		"header": "0x22f0",
+		"header": "0x22f8",
 		"include": [
 			"ekwd|ClothingTypeGlasses"
 		],
@@ -107,7 +107,7 @@
 		"isAnyKeyword": false,
 		"isInclusiveOr": false,
 		"isFullReplaced": false,
-		"header": "0x22f1",
+		"header": "0x22f9",
 		"include": [
 			"ekwd|ClothingTypeDress"
 		],
@@ -122,7 +122,7 @@
 		"isAnyKeyword": false,
 		"isInclusiveOr": false,
 		"isFullReplaced": false,
-		"header": "0x22f2",
+		"header": "0x22fa",
 		"include": [
 			"ekwd|ClothingTypeFormalWear"
 		],
@@ -139,7 +139,7 @@
 		"isAnyKeyword": false,
 		"isInclusiveOr": false,
 		"isFullReplaced": false,
-		"header": "0x22f3",
+		"header": "0x22fb",
 		"include": [
 			"ekwd|ObjectTypeClothing"
 		],
