--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "fo76-icon-tags",
-  "type": "module",
-  "scripts": {
-    "icons-cleanup": "bun run ./utils/icons-cleanup.ts",
-    "build-all": "bun run ./utils/builders/all.ts",
-    "optimize-svg": "svgo ./icons/aid ./icons/ammo ./icons/apparel ./icons/armor ./icons/currency ./icons/events ./icons/food ./icons/holotapes ./icons/keys ./icons/legendary-effects ./icons/misc  ./icons/notes ./icons/weapons"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "@types/jsdom": "^21.1.6",
-    "jsdom": "^24.1.0",
-    "svgo": "^3.3.2"
-  }
+    "name": "fo76-icon-tags",
+    "type": "module",
+    "scripts": {
+        "icons-cleanup": "bun run ./utils/icons-cleanup.ts",
+        "build-all": "bun run ./utils/builders/all.ts",
+        "optimize-svg": "svgo ./icons/aid ./icons/ammo ./icons/apparel ./icons/armor ./icons/currency ./icons/events ./icons/food ./icons/holotapes ./icons/keys ./icons/legendary-effects ./icons/misc  ./icons/notes ./icons/weapons"
+    },
+    "devDependencies": {
+        "@types/bun": "latest",
+        "prettier": "3.3.3"
+    },
+    "peerDependencies": {
+        "typescript": "^5.0.0"
+    },
+    "dependencies": {
+        "@types/jsdom": "^21.1.6",
+        "jsdom": "^24.1.0",
+        "svgo": "^3.3.2"
+    }
 }
