--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fo76-icon-tags",
   "type": "module",
   "scripts": {
-    "build-all": "bun run ./src/scripts/build-all/index.ts",
+    "build-all": "bun run ./src/scripts/build-all.ts",
     "icons-cleanup": "bun run ./src/scripts/icons-cleanup.ts",
     "sort-rules": "bun run ./src/scripts/sort-rules.ts",
     "sort-categories": "bun run ./src/scripts/sort-categories.ts",
