added 'update-fonts-swf' script

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "scripts": {
     "build-all": "bun run ./src/scripts/build-all.ts",
+    "update-fonts-swf": "bun run ./src/scripts/update-fonts-swf.ts",
     "icons-cleanup": "bun run ./src/scripts/icons-cleanup.ts",
     "optimize-svg": "svgo ./assets/icons/aid ./assets/icons/ammo ./assets/icons/apparel ./assets/icons/armor ./assets/icons/currency ./assets/icons/events ./assets/icons/food ./assets/icons/holotapes ./assets/icons/keys ./assets/icons/legendary-effects ./assets/icons/misc  ./assets/icons/notes ./assets/icons/weapons"
   },
